--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     ports:
       - 8000:80
-# networks:
-#   default:
-#     external: true
-#     name: nginx-proxy-manager_default 
+networks:
+  default:
+    external: true
+    name: nginx-proxy-manager_default 
