--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^10.0.5",
     "@angular/router": "^10.0.5",
     "@ngrx/effects": "^10.0.0",
+    "@ngrx/router-store": "^10.0.0",
     "@ngrx/store": "^10.0.0",
     "bootstrap": "3.3.7",
     "rxjs": "^6.6.3",
@@ -28,10 +29,10 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@ngrx/store-devtools": "10.0.0",
     "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/cli": "^10.0.4",
     "@angular/compiler-cli": "^10.0.5",
+    "@ngrx/store-devtools": "10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.9",
