--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "tsc": "tsc",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "prod": "tsc && node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +29,9 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.12"
+    "@types/cors": "^2.8.12",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2"
   }
 }
