--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -26,24 +28,21 @@
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.0.0",
     "tslib": "^2.0.3",
-    "zone.js": "^0.10.3"
+    "zone.js": "^0.11.8"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^11.2.0",
     "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/cli": "^10.0.4",
     "@angular/compiler-cli": "^10.0.5",
     "@ngrx/store-devtools": "10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.24",
     "@types/node": "^12.19.9",
     "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.4.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
