--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "e2e:ci": "start-server-and-test start http://localhost:4200 cypress:run"
   },
   "private": true,
   "dependencies": {
@@ -35,17 +38,25 @@
     "@angular-devkit/build-angular": "^0.1100.4",
     "@angular/cli": "^10.0.4",
     "@angular/compiler-cli": "^10.0.5",
+    "@cypress/webpack-preprocessor": "^6.0.4",
     "@ngrx/store-devtools": "10.0.0",
+    "@types/cypress": "^1.1.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.19.9",
     "codelyzer": "^6.0.1",
+    "cypress": "^10.11.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
     "protractor": "~7.0.0",
+    "start-server-and-test": "^2.0.11",
+    "ts-loader": "^9.5.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "webpack": "^5.99.7",
+    "webpack-cli": "^6.0.1"
   }
 }
