--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.9",
     "codelyzer": "^6.0.1",
+    "cypress": "^14.3.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
