--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "private": true,
   "dependencies": {
@@ -35,17 +36,15 @@
     "@ngrx/store-devtools": "10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^29.5.14",
     "@types/node": "^12.19.9",
     "codelyzer": "^6.0.1",
     "cypress": "^14.3.2",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "esbuild": "^0.25.3",
+    "jest": "^26.6.0",
+    "jest-preset-angular": "^8.4.0",
     "protractor": "~7.0.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
