--- a/client/package.json
+++ b/client/package.json
@@ -27,8 +27,7 @@
     "bootstrap": "3.3.7",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.0.0",
-    "tslib": "^2.0.3",
-    "zone.js": "^0.10.3"
+    "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.4",
@@ -42,16 +41,18 @@
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.5",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.4.0",
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^3.9.10",
+    "zone.js": "^0.15.0"
   }
 }
